--- a/rejestracja/app/src/main/res/layout/activity_main.xml
+++ b/rejestracja/app/src/main/res/layout/activity_main.xml
@@ -1,74 +1,71 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    >
+  >
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Rejestruj konto"
+        android:text="Rejstracja"
         android:background="#008080"
-        android:textColor="#fff"
-        android:textSize="26sp"
+        android:textSize="24dp"
+        android:textColor="@color/white"
         />
-
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Podaj e-mail:"
-        />
+        android:textSize="18dp"
+        android:text="Podaj e-mail:" />
 
     <EditText
-        android:id="@+id/poleedycyjneemail"
+        android:id="@+id/editTextEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textEmailAddress"
         android:hint="email"
-        />
+        android:inputType="textEmailAddress" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Podaj hasło:"
-        />
-
-    <EditText
-        android:id="@+id/poleedycyjnehaslo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="18dp"
+        android:text="Podaj hasło:" />
+
+    <EditText
+        android:id="@+id/editTextPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Podaj hasło"
         android:ems="10"
-        android:inputType="textPassword"
-        />
+        android:inputType="textPassword" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Powtórz hasło:"
-        />
-
-    <EditText
-        android:id="@+id/poleedycyjnepowhaslo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="18dp"
+        android:text="Powtórz hasło:" />
+
+    <EditText
+        android:id="@+id/editTextPassword2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Powtórz hasło"
         android:ems="10"
-        android:inputType="textPassword"
-        />
+        android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/zatwierdz"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="ZATWIERDŹ" />
+        android:text="ZATWIERDŹ"
+        android:layout_gravity="center" />
 
     <TextView
-        android:id="@+id/komunikaty"
-        android:layout_width="wrap_content"
+        android:id="@+id/textdokom"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Autor: Seweryn Pietras" />
-
+        android:text="Autor: Seweryn Pietras"
+        android:gravity="center"
+        />
 </LinearLayout>
