--- a/rejestracja/app/src/main/res/layout/activity_main.xml
+++ b/rejestracja/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Rejstracja"
+        android:text="Rejetracja"
         android:background="#008080"
         android:textSize="24dp"
         android:textColor="@color/white"
